- remove z-indexes from select, dropdown, modalDialog - update radix versions to prevent it's common private deps to collide - add modal internal prop do dropdownMenu, select

--- a/xmlui/src/components/DropdownMenu/DropdownMenu.module.scss
+++ b/xmlui/src/components/DropdownMenu/DropdownMenu.module.scss
@@ -39,7 +39,6 @@ $color-MenuSeparator: createThemeVar("color-MenuSeparator");
   .DropdownMenuContent {
     max-height: var(--radix-dropdown-menu-content-available-height);
     overflow: auto;
-    z-index: 9999;
 
     &.compact {
       min-width: auto;
