--- a/xmlui/src/components/ModalDialog/ModalDialog.module.scss
+++ b/xmlui/src/components/ModalDialog/ModalDialog.module.scss
@@ -50,7 +50,6 @@ $marginBottom-title-ModalDialog: createThemeVar("Dialog:marginBottom-title-#{$co
   .overlayBg {
     background-color: $backgroundColor-overlay-ModalDialog;
     inset: 0;
-    z-index: 1000;
     animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
     position: fixed;
 
@@ -77,7 +76,6 @@ $marginBottom-title-ModalDialog: createThemeVar("Dialog:marginBottom-title-#{$co
     max-height: 100%;
     max-width: $maxWidth-ModalDialog;
     min-width: $minWidth-ModalDialog;
-    z-index: 1000;
     isolation: isolate;
     position: relative;
     display: flex;
